--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -77,6 +77,8 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="CameraZoomIn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
++ActionMappings=(ActionName="CameraZoomOut",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
 +AxisMappings=(AxisName="MovementForward/Backward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MovementLeft/Right",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MovementForward/Backward",Scale=-1.000000,Key=S)
