--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -80,6 +80,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="CameraZoomIn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
 +ActionMappings=(ActionName="CameraZoomOut",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
 +ActionMappings=(ActionName="MouseRightClick",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
++ActionMappings=(ActionName="MouseLeftClick",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +AxisMappings=(AxisName="MovementForward/Backward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MovementLeft/Right",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MovementForward/Backward",Scale=-1.000000,Key=S)
